bugfix + movement test

--- a/v2v_esp32/.vscode/settings.json
+++ b/v2v_esp32/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
         "*.tcc": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "unordered_map": "cpp",
+        "fstream": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp"
     }
 }
