--- a/v2v_esp32/.vscode/settings.json
+++ b/v2v_esp32/.vscode/settings.json
@@ -6,6 +6,7 @@
         "fstream": "cpp",
         "istream": "cpp",
         "ostream": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "condition_variable": "cpp"
     }
 }
