--- a/v2v_arduino/platformio.ini
+++ b/v2v_arduino/platformio.ini
@@ -12,4 +12,5 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = adafruit/Adafruit MPU6050@^2.2.4
+lib_deps = 
+	rfetick/MPU6050_light@^1.1.0
